Add post resolvers and finished error handling
